<resources>
    <string name="app_name">TozaUz</string>
    <string name="title_dashboard">История</string>
    <string name="title_notifications">Перевод денги</string>

    <string name="login_failed">"Ошибка входа"</string>
    <string name="language_change">Выберите язык</string>
    <string name="txt_language_ozbek">Uzbek</string>
    <string name="txt_language_rus">Русский</string>
    <string name="registerSimple">Вход</string>
    <string name="auth_phone_title">Войти в систему</string>
    <string name="phone_auth_text">Через номер телефона</string>
    <string name="text_phone">Номер телефона</string>
    <string name="fragment_login_phone_sms">Наш номер придёт СМС с кодом подверждение</string>
    <string name="signIn">Войти</string>
    <string name="numberDoesntExist">В систему отсуствует такой номер</string>
    <string name="enterSomething">Ввидени что-то</string>
    <string name="smsBack">Вход</string>
    <string name="enterCode">Войти код-парол</string>
    <string name="sendSMStoNum">На ваш номер +998 90 568 1015\n отправлен SMS с кодо</string>
    <string name="sendAgain"><u>Отправит занова</u></string>
    <string name="continue_">Продолжить</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="home_interare_fragment_list_details">Клиенты</string>
    <string name="fragment_balance_history_toolbar">История пополнения</string>
    <string name="fragment_post_details_date">C</string>
    <string name="fragment_post_details_to_date">По</string>
    <string name="home_taxi_client_filter_clock_date">01 авг 2021</string>
    <string name="save">Сохранить</string>
    <string name="date">Дата</string>
    <string name="_2023_01_25_19_11_11">2023-01-25 19:11:11</string>
    <string name="_200_so_m">200 so\'m</string>
    <string name="go_qr_code">сканирование qrcode</string>
    <string name="balance_avtive">ОCНОВНАЯ</string>
    <string name="fragment_balance">Баланс</string>
    <string name="fragment_add_card_toolbar">Привязать карту</string>
    <string name="fragment_balance_add_card_add_card_title">Введите данные карты</string>
    <string name="fragment_balance_sort_card">Название карты</string>
    <string name="fragment_balance_add_card_number_card">Номер карты</string>
    <string name="fragment_balance_add_card_srok_date">Срок действия</string>
    <string name="fragment_balance_add_sms_code">Такая карта отсуствует</string>
    <string name="back">Назад</string>
    <string name="error">не доступ!!</string>
    <string name="count">Количество</string>
    <string name="type">Тип мишка</string>
    <string name="title_balance">Б:</string>
    <string name="fragment_profile_language">Язык</string>
    <string name="profile">Профиль</string>
    <string name="add_card">Добавить карта</string>
    <string name="main_bottom">Главная</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title1">Для бытовых отходов</string>
    <string name="title2">Для строительных отходов</string>
    <string name="example_price">5 000</string>
    <string name="_8600_03_9696">8600 03** **** 9696</string>
    <string name="_450_000_25">450 000.25 сум</string>
    <string name="sqb">Карта SQB</string>
    <string name="_12_12">12/12</string>
    <string name="card_hint">xxxx xxxx xxxx xxxx</string>
    <string name="info_card">Карта №4</string>
    <string name="face_number">+998993018716</string>
    <string name="administrator">Администратор</string>
</resources>