<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="uz.toza.tozauz.ui.fragment.home.HomeFragment"
        android:label="@string/main_bottom"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_fragment_qr_code"
            app:destination="@id/fragment_qr_code" />
    </fragment>

    <fragment
        android:id="@+id/fragment_qr_code"
        android:name="uz.toza.tozauz.ui.fragment.home.qrCode.QrCodeFragment"
        tools:layout="@layout/fragment_qr_code" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="uz.toza.tozauz.ui.fragment.history.HistoryFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="uz.toza.tozauz.ui.fragment.balance.BalanceFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_balance">

    </fragment>

    <fragment
        android:id="@+id/fragment_add_card"
        android:name="uz.toza.tozauz.ui.fragment.balance.AddCardFragment"
        tools:layout="@layout/fragment_add_card" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="uz.toza.tozauz.ui.fragment.profile.ProfileFragment"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_fragment_add_card"
            app:destination="@id/fragment_add_card" />
    </fragment>
</navigation>