<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".ui.fragment.balance.BalanceFragment">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/margin_padding_4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/inter_medium"
            android:text="@string/fragment_balance"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_marginHorizontal="@dimen/margin_padding_8dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="@dimen/text_size_12sp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/mainCard"
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:layout_gravity="center"
            android:background="@color/green"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_wave_card"
                android:scaleType="centerCrop" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="158dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/txt_card_type"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/text_size_16sp"
                    android:layout_marginTop="@dimen/margin_padding_20dp"
                    android:src="@drawable/card"
                    tools:ignore="ContentDescription,HardcodedText" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/margin_padding_8dp"
                    android:layout_marginTop="@dimen/text_size_8sp"
                    android:background="@drawable/active_style"
                    android:fontFamily="@font/inter_medium"
                    android:paddingHorizontal="@dimen/margin_padding_8dp"
                    android:text="@string/balance_avtive"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_card_name"
                style="@style/TextMedium16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="@dimen/text_size_16sp"
                android:layout_marginTop="@dimen/margin_padding_16dp"
                android:text="@string/sqb"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_card_balance"
                style="@style/TextBold16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_marginStart="@dimen/text_size_16sp"
                android:layout_marginTop="@dimen/margin_padding_36dp"
                android:text="@string/_450_000_25"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_card_number"
                style="@style/TextRegular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginTop="@dimen/margin_padding_36dp"
                android:layout_marginEnd="@dimen/text_size_16sp"
                android:text="@string/_8600_03_9696"
                android:textColor="@color/white" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_padding_16dp"
        android:layout_marginTop="@dimen/margin_padding_48dp"
        android:background="@drawable/ic_item_contener"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/margin_padding_20dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_padding_48dp"
            android:background="@drawable/ic_item_continer_border_edit_style"
            android:hint="@string/example_price"
            android:inputType="number"
            android:paddingHorizontal="@dimen/margin_padding_8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sms_code"
            style="@style/Button60015"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_padding_16dp"
            android:text="@string/save" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>