<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6FA"
    android:orientation="vertical"
    tools:context=".ui.fragment.profile.ProfileFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_padding_56dp"
        android:background="@color/white"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/TextBold18"
            android:text="@string/profile"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_padding_56dp"
            android:layout_marginHorizontal="@dimen/text_size_16sp"
            android:layout_marginTop="@dimen/text_size_8sp"
            android:background="@drawable/ic_item_contener"
            android:gravity="center|start">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextMedium16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_8dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="@dimen/margin_padding_8dp"
                android:text="@string/administrator" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_padding_56dp"
            android:layout_marginHorizontal="@dimen/text_size_16sp"
            android:layout_marginTop="@dimen/text_size_8sp"
            android:background="@drawable/ic_item_contener"
            android:gravity="center|start">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextMedium16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_8dp"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="@dimen/margin_padding_8dp"
                android:text="@string/face_number" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btn_create_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_padding_56dp"
            android:layout_marginHorizontal="@dimen/text_size_16sp"
            android:layout_marginTop="@dimen/text_size_8sp"
            android:background="@drawable/ic_item_contener"
            android:gravity="center|start">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextMedium16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_8dp"
                android:drawableStart="@drawable/cash_back"
                android:drawablePadding="@dimen/margin_padding_8dp"
                android:text="@string/add_card"
                app:drawableTint="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/btn_lang"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_padding_56dp"
            android:layout_marginHorizontal="@dimen/text_size_16sp"
            android:layout_marginTop="@dimen/text_size_8sp"
            android:background="@drawable/ic_item_contener"
            android:gravity="center|start">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextMedium16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_8dp"
                android:drawableStart="@drawable/lang"
                android:drawablePadding="@dimen/margin_padding_8dp"
                android:text="@string/language_change" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>